# optimcut

./: .gitignore  LICENSE  Notes_Cutting_stock_optimization.ipynb  README.md  _optimcut.cpp  _optimcut.html  _optimcut.pyx  bigger_Example.py  cli.py  main.py  optimcut.h  optimcut.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.csv  test_optimcut.py  test_optimizer.py
src/: _optimcut.pyx
src/optimcut/: __init__.py  __main__.py  optimcut.h
test/: test_optimcut.py
