[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optimcut"
version = "0.0.1"
authors = [
  { name="Konrad Kobuszewski", email="konrad.kobuszewski93@gmail.com" },
]
description = "Package for 1d cutting stock problem"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/KKobuszewski/optimcut"
Issues   = "https://github.com/KKobuszewski/optimcut"

